gl31-master/src/test/deca/context/valid/complet/protected_class.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 19/01/2021
class Test{
    protected int a;
    protected float f;
    protected boolean b;
}
